added color palette to home page
https://colorhunt.co/palette/1b262c0f4c753282b8bbe1fa

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- <button class="dropbtn">Quick<br>Links</button> -->
       <div class="dropdown-content">
         <!-- APK LINK -->
-        <div class="navigation1" style="background-color: #ffffff9b;color: #000000;"></div>
+        <div class="navigation1"></div>
         <script src="apk-link.js"></script>
         <a style="color: rgb(0, 0, 0);" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
           <small>oUITS<br>Scheduler</small>
@@ -316,26 +316,26 @@
 
   <!-- -------------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #a9cc75b3;">
+  <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #1B262C;">
 
 
-    <p style="text-align: center;color: #000000cd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
+    <p style="text-align: center;color: #ffffffcd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
 
     <div class="container-6">
       <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
-        style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        style="color: #ffffff;padding-top:15%;background-color: #a5ca88;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
         Upload<br>Questions<br>
         <i style="font-size: x-small;">(.pdf Upload)</i>
       </a>
       <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
-        style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        style="color: #ffffff;padding-top:15%;background-color: #3282B8;border-radius: 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
         Upload<br>Notes<br>
         <i style="font-size: x-small;">(.zip Upload)</i>
       </a>
 
     </div>
 
-    <p align="center" style="font-size: small;margin: -5px;color: #00000076;">( to be listed in the semester folders )
+    <p align="center" style="font-size: small;margin: -5px;color: #ffffffb4;">( to be listed in the semester folders )
     </p>
 
   </div>
