--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
     <div class="container-6">
       <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
-        style="color: #ffffff;padding-top:15%;background-color: #a5ca88;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        style="color: #000000b8;padding-top:15%;background-color: #a5ca88;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
         Upload<br>Questions<br>
         <i style="font-size: x-small;">(.pdf Upload)</i>
       </a>
