--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -403,58 +403,41 @@
 
     <!-- GRID FOR INFO -->
 
-    <div class="container-5" style="max-width: 500px;min-width: 300px;" align=center>
+    <div class="container-5" style="max-width: 500px;min-width: 300px;background-color: #1B262C;" align=center>
         <table class="resources-table-5" align=center style="width:90%;align-items: center;justify-content: center;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info
                     here</p>
             </tr>
             <tr style="margin-top: 0px;">
-                <td style="background-color: #00000000;margin: auto;min-width: 280px;" colspan="2">
-                    <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;margin-bottom: -20px;min-width: 200px;width:100%">
-                    <div class="container-6" style="max-width: 500px;background-color: #00000000;" align="center">
 
-                        <div class="menu-button" id="menuButton1" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:70%;width:70%;">
-                            <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px">
-                                Notice</b>
-                            </p>
-                        </div>
-                        <div class="menu-button" id="menuButton3" align="center"
-                            style="background-color: rgba(0, 0, 0, 0.247);height:70%;width:70%;">
-                            <p class="cell-link" align="center"
-                                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
-                                Class Routine
-                            </p>
-                        </div>
+                <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
+                      border-radius: 5px;min-width: 200px;width:70%">
+                <div class="container-6" style="background-color: #00000000;margin: auto;justify-content: center;column-gap: 10%;">
 
+                    <div class="menu-button" id="menuButton1" align="center"
+                        style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                        <p class="cell-link" align="center" style="color: rgb(255, 255, 255);padding:10px">
+                            Notice</b>
+                        </p>
                     </div>
-                    <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:100%">
-                </td>
+                    <div class="menu-button" id="menuButton3" align="center"
+                        style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                        <p class="cell-link" align="center"
+                            style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                            Class Routine
+                        </p>
+                    </div>
+
+                </div>
+                <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
+                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:70%">
+
 
             </tr>
 
-            <!-- <tr>
-
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-    margin-right: auto;">
-                            <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                                Notice
-                            </p>
-                        </td>
-                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-                margin-right: auto;">
-                            <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                                Class Routine
-                            </p>
-                        </td>
-
-            </tr> -->
             <tr>
-                <!-- class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto; margin-right: auto;" -->
+
                 <td style="margin-left: auto;
     margin-right: auto;">
                     <a class="cell-link"
@@ -462,56 +445,53 @@
                         target="_blank" style="padding: 10%;">
                         University Questions
                     </a>
-                    <!-- <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                        University Questions
-                    </p> -->
                 </td>
 
                 <td style="margin-left: auto;
     margin-right: auto;">
-                    <!-- <p> -->
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
                         target="_blank" style="padding: 10%;">
                         CSE Course Lists
                     </a>
 
-                    <!-- </p> -->
                 </td>
             </tr>
             <tr>
                 <td style="margin-left: auto;
     margin-right: auto;">
-                    <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
                         target="_blank" style="padding: 10%;">
                         CSE Course Outlines
                     </a>
 
-                    <!-- </p> -->
                 </td>
                 <td style="margin-left: auto;
                 margin-right: auto;">
-                                <!-- <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"> -->
-                                <a class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
-                                    target="_blank" style="padding: 10%;">
-                                    Departments info
-                                </a>
-                                <!-- </p> -->
-                            </td>
+                    <a class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
+                        target="_blank" style="padding: 10%;">
+                        Departments info
+                    </a>
+                </td>
 
             </tr>
             <tr>
-                
+                <td style="margin-left: auto;
+                margin-right: auto;">
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1_pK1GknO6Gr8iLQtNPZ8zHB9RWauC-Z2?usp=drive_link"
+                        target="_blank" style="padding: 10%;">
+                        Elective Courses
+                    </a>
+                </td>
                 <td style="margin-left: auto;
     margin-right: auto;">
-                    <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
                         target="_blank" style="padding: 10%;">
                         Task Materials
                     </a>
-                    <!-- </p> -->
                 </td>
+
 
             </tr>
 
@@ -591,8 +571,7 @@
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link"
-                        href="PDF.html">
+                    <a class="cell-link" href="PDF.html">
                         See CSE Class Routine
                     </a>
                 </div>
