tried to keep all links together is js

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
   <!-- TOP BAR -->
 
+  <!-- <div class="navigation2"></div>
+  <script src="backup\test-all-link-together.js"></script> -->
+
   <div class="topnav-1">
 
     <a class="active-1" href="page-depth-01/Tutorials.html">
