--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -449,8 +449,7 @@
 
             <tr>
 
-                <td style="margin-left: auto;
-    margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
                         target="_blank" style="padding: 10%;">
@@ -458,8 +457,7 @@
                     </a>
                 </td>
 
-                <td style="margin-left: auto;
-    margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
                         target="_blank" style="padding: 10%;">
@@ -469,16 +467,14 @@
                 </td>
             </tr>
             <tr>
-                <td style="margin-left: auto;
-    margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
                         target="_blank" style="padding: 10%;">
                         CSE Course Outlines
                     </a>
 
                 </td>
-                <td style="margin-left: auto;
-                margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
                         target="_blank" style="padding: 10%;">
                         Departments info
@@ -487,16 +483,14 @@
 
             </tr>
             <tr>
-                <td style="margin-left: auto;
-                margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1_pK1GknO6Gr8iLQtNPZ8zHB9RWauC-Z2?usp=drive_link"
                         target="_blank" style="padding: 10%;">
                         Elective Courses
                     </a>
                 </td>
-                <td style="margin-left: auto;
-    margin-right: auto;">
+                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
                         target="_blank" style="padding: 10%;">
                         Task Materials
