--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <div>
       <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);"><small style="font-size: x-small;">This is a trial web version
+      <p align=center style="color:rgba(0, 0, 0, 0.422);width: 95%;"><small style="font-size: x-small;">This is a trial web version
           of the
           <b>UNOFFICIAL</b>
           Online
