added faq sections

--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
 
+  <div class="section"
+    data-faq="This section contains common resources like Notice, course list, outlines etc. and a Semester Selector [Click here] to find materials for your specific courses.">
+    <div class="faq-icon">?</div>
+    <div class="faq-box"></div>
+  </div>
+
+
   <div class="container-5" style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
       <tr>
@@ -158,9 +165,12 @@
             style="max-height: 80px;text-align: center;text-align: center;justify-content: center;padding: 5%;">
             General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
           </a>
+
         </td>
+
       </tr>
     </table>
+
 
     <!-- -------------------------------------------------------------------- -->
     <div class="semester-selector-container" style="margin-bottom: -30px;">
@@ -181,7 +191,10 @@
       <p id="driveLink"></p>
     </div>
 
+
   </div>
+
+
 
   <!-- -------------------------------------------------------------------- -->
 
@@ -318,6 +331,14 @@
   </script>
 
   <!-- -------------------------------------------------------------------- -->
+
+
+  <div class="section"
+    data-faq="If you feel like the resources are lacking, and you can solve that, don't be shy and share your resources!">
+    <div class="faq-icon">?</div>
+    <div class="faq-box"></div>
+  </div>
+
   <!-- -------------------------------------------------------------------- -->
   <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #1B262C;">
 
@@ -343,6 +364,11 @@
 
   </div>
 
+
+
+
+
+
   <p align=center style="font-size: x-small;color: #00000086;margin-top: -10px;">This Section was inspired by <a
       href="https://notebot.netlify.app/" target="_blank" style="color: #0244f99d;">https://notebot.netlify.app/</a></p>
 
@@ -359,6 +385,12 @@
   <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-bottom: -5px;margin-top: 15px;">
     <small><i>Portal for Extracurriculars</i></small>
   </p>
+
+  <div class="section"
+    data-faq="Academics are all about CGPA, but Job Markets ask more from you.||Are you willing to put the effort?">
+    <div class="faq-icon">?</div>
+    <div class="faq-box"></div>
+  </div>
 
   <div style="width:76%;max-width: 600px;" class="container-5" align="center">
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
@@ -419,7 +451,8 @@
 
     <div>
       <!-- BOTTOM CREDITS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.422);width: 95%;"><small style="font-size: x-small;">This is a trial web version
+      <p align=center style="color:rgba(0, 0, 0, 0.422);width: 95%;"><small style="font-size: x-small;">This is a trial
+          web version
           of the
           <b>UNOFFICIAL</b>
           Online
@@ -460,6 +493,18 @@
     </font>
 
   </div>
+  <!-- -------------------------------------------------------------------- -->
+  <!-- FAQ Section -->
+  <!-- 
+  <div class="section" data-faq="What is HTML?|How do I use CSS?">
+    <div class="faq-icon">?</div>
+    <div class="faq-box"></div>
+  </div> 
+  <script src="faq.js"></script>
+  -->
+
+  <script src="faq.js"></script>
+  <!-- -------------------------------------------------------------------- -->
 
 </body>
 
