--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -221,16 +221,29 @@
 
         <div class="university-resources" align="center">
             <font size="5">
-                <p align="center">Student-Projects Collection</p>
+                <p align="center">UITS-Projects Collection</p>
             </font>
 
+            <!-- ----------------------------------------------------------------------- -->
+            <div class="section"
+                data-faq="Projects by UITS Students. Let me know if you're working on something and are okay with sharing it, I'll happily list them here.|: )">
+                <div class="faq-icon">?</div>
+                <div class="faq-box"></div>
+            </div>
+            <!-- ----------------------------------------------------------------------- -->
+
             <div class="table-container">
+
                 <table>
+
                     <thead>
                         <tr>
                             <th colspan="2" style="text-align: center;"> Resource Projects</th>
+
                         </tr>
+
                     </thead>
+
                     <tbody>
                         <tr>
                             <td colspan="2" style="text-align: center;">
@@ -301,6 +314,14 @@
                 <p align="center">University Resources Collection</p>
             </font>
 
+            <!-- ----------------------------------------------------------------------- -->
+            <div class="section"
+                data-faq="Projects by the Students of other Universities and Facilities employed by the University website.">
+                <div class="faq-icon">?</div>
+                <div class="faq-box"></div>
+            </div>
+            <!-- ----------------------------------------------------------------------- -->
+            
             <table>
                 <thead>
                     <tr>
@@ -342,7 +363,7 @@
                         <td>
                             <div class="link-group">
                                 <a href="https://notebot.netlify.app/" target="_blank">notebot</a>
-                               
+
                             </div>
                         </td>
                     </tr>
@@ -460,6 +481,18 @@
 
     <a href="javascript:history.back()" class="back-icon">&#8592;</a>
 
+    <!-- -------------------------------------------------------------------- -->
+    <!-- FAQ Section -->
+    <!-- 
+  <div class="section" data-faq="What is HTML?|How do I use CSS?">
+    <div class="faq-icon">?</div>
+    <div class="faq-box"></div>
+  </div> 
+  <script src="faq.js"></script>
+  -->
+
+    <script src="../faq.js"></script>
+    <!-- -------------------------------------------------------------------- -->
 
 </body>
 
