--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -94,8 +94,7 @@
         }
 
         .menu-button {
-            /* background-color: #00000000; */
-            background-color: #00000044;
+            background-color: #00000000;
             border-radius: 8px;
             padding: 12px;
             position: relative;
@@ -118,7 +117,17 @@
         }
 
         .menu-button:hover {
-            background-color: #424242;
+            transform: scale(1.05);
+            /* Slightly enlarge the button */
+            background-color: rgba(42, 81, 181, 0.694) !important;
+            /* Lighten background on hover */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            /* Add a subtle shadow */
+        }
+
+        .menu-button:hover .cell-link {
+            color: rgba(255, 255, 255, 0.8);
+            /* Slightly change text color on hover */
         }
 
         .menu-line {
@@ -393,7 +402,7 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
-    <div class="container-5" style="max-width: 500px;min-width: 300px;" align=center>
+    <div class="container-5" style="max-width: 500px;min-width: 300px;background-color: #1B262C;" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
@@ -450,7 +459,7 @@
                 <td style="background-color: #00000000;margin: auto;min-width: 280px;" colspan="2">
                     <div class="container-6" style="max-width: 500px;background-color: #00000000;" align="center">
                         <div class="menu-button" id="menuButton3" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
+                            style="background-color: rgba(0, 0, 0, 0.292);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px;background-color: #00000000;">
                                 Career
@@ -458,21 +467,21 @@
                             </p>
                         </div>
                         <div class="menu-button" id="menuButton2" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
+                            style="background-color: rgba(0, 0, 0, 0.292);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px">Open
                                 Source Learning
                             </p>
                         </div>
                         <div class="menu-button" id="menuButton1" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
+                            style="background-color: rgba(0, 0, 0, 0.292);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px">
                                 Softwares</b>
                             </p>
                         </div>
                         <div class=" menu-button" id="menuButton4" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
+                            style="background-color: rgba(0, 0, 0, 0.292);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(253, 253, 253, 0.649);margin:auto;padding:10px">UITS
                                 Archive<br></p>
