--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -90,8 +90,7 @@
             border-radius: 8px;
             padding: 12px;
             position: relative;
-            /* border-collapse: collapse; */
-            /* border-spacing: ; */
+
             cursor: pointer;
             display: flex;
             flex-direction: column;
@@ -110,7 +109,17 @@
         }
 
         .menu-button:hover {
-            background-color: rgba(100, 100, 150, 0.9);
+            transform: scale(1.05);
+            /* Slightly enlarge the button */
+            background-color: #1B262C !important;
+            /* Lighten background on hover */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            /* Add a subtle shadow */
+        }
+
+        .menu-button:hover .cell-link {
+            color: rgba(255, 255, 255, 0.8);
+            /* Slightly change text color on hover */
         }
 
         .menu-line {
@@ -391,24 +400,24 @@
 
     <div class="container-6" style="max-width: 500px;background-color: #00000000;margin-bottom: 50px;">
         <div class="menu-button" id="menuButton1" align="center"
-            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
+            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
             <p class="cell-link" align="center"
                 style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Learning Websites
             </p>
         </div>
         <div class="menu-button" id="menuButton2" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
             <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Programming Videos
             </p>
         </div>
         <div class="menu-button" id="menuButton4" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
             <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Online Judges</b>
             </p>
         </div>
-        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
+        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
             <a class="cell-link" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;"
                 href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                 target="_blank">
