--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -580,6 +580,11 @@
                         See CSE Class Routine
                     </a>
                 </div>
+                <div class="link-item">
+                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qW2d5epe3XeFy0hbFuQoGd7rfRZsvkFr?usp=drive_link" target="_blank">
+                        Routine by Section
+                    </a>
+                </div>
                 <!-- More links here -->
             </div>
         </div>
