--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -570,19 +570,20 @@
             <div class="popup-menu-category" align="center">
                 <br>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
-                        target="_blank">
-                        Class Routine format
+                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qW2d5epe3XeFy0hbFuQoGd7rfRZsvkFr?usp=drive_link" target="_blank">
+                        Routine by Section
                     </a>
                 </div>
                 <div class="link-item">
                     <a class="cell-link" href="PDF.html">
-                        See CSE Class Routine
+                        CSE Faculty Routine
                     </a>
                 </div>
+                
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qW2d5epe3XeFy0hbFuQoGd7rfRZsvkFr?usp=drive_link" target="_blank">
-                        Routine by Section
+                    <a class="cell-link" href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1"
+                        target="_blank">
+                        Class Routine format
                     </a>
                 </div>
                 <!-- More links here -->
